--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="Javascript compress project" basedir="D:\cocos\huanZhuangBianJiQi" default="compile">
+<project name="Javascript compress project" basedir="D:\cocos\guanZhu" default="compile">
 
     <taskdef name="jscomp" classname="com.google.javascript.jscomp.ant.CompileTask"
              classpath="D:\cocos2d-x-3.7.1\tools\cocos2d-console\plugins\project_compile\build_web/bin/compiler-1.7.jar"/>
@@ -8,11 +8,11 @@
         <jscomp compilationLevel="simple" 
                 warning="quiet"
                 debug="false" 
-                output="D:\cocos\huanZhuangBianJiQi\publish\html5/game.min.js"
+                output="D:\cocos\guanZhu\publish\html5/game.min.js"
                 languagein="ECMASCRIPT5"
                 
                 >
-            <sources dir="D:\cocos\huanZhuangBianJiQi\frameworks\cocos2d-html5">
+            <sources dir="D:\cocos\guanZhu\frameworks\cocos2d-html5">
                 <file name="CCBoot.js"/>
                 <file name="CCDebugger.js"/>
                 <file name="cocos2d/core/utils/BinaryLoader.js"/>
@@ -75,6 +75,7 @@
                 <file name="cocos2d/core/sprites/CCSpriteFrameCache.js"/>
                 <file name="cocos2d/core/CCConfiguration.js"/>
                 <file name="cocos2d/core/CCDirector.js"/>
+                <file name="cocos2d/core/CCDirectorCanvas.js"/>
                 <file name="cocos2d/core/CCDirectorWebGL.js"/>
                 <file name="cocos2d/core/CCCamera.js"/>
                 <file name="cocos2d/core/CCScheduler.js"/>
@@ -227,7 +228,9 @@
                 <file name="extensions/ccui/uiwidgets/UITextAtlas.js"/>
                 <file name="extensions/ccui/uiwidgets/UITextBMFont.js"/>
                 <file name="extensions/ccui/uiwidgets/UITextField.js"/>
+                <file name="extensions/ccui/uiwidgets/UIVideoPlayer.js"/>
                 <file name="extensions/ccui/uiwidgets/UIRichText.js"/>
+                <file name="extensions/ccui/uiwidgets/UIWebView.js"/>
                 <file name="extensions/ccui/uiwidgets/scroll-widget/UIScrollView.js"/>
                 <file name="extensions/ccui/uiwidgets/scroll-widget/UIListView.js"/>
                 <file name="extensions/ccui/uiwidgets/scroll-widget/UIPageView.js"/>
@@ -272,6 +275,9 @@
                 <file name="extensions/cocostudio/timeline/ActionTimeline.js"/>
                 <file name="extensions/cocostudio/timeline/Frame.js"/>
                 <file name="extensions/cocostudio/timeline/Timeline.js"/>
+                <file name="extensions/cocostudio/timeline/CCSkinNode.js"/>
+                <file name="extensions/cocostudio/timeline/CCBoneNode.js"/>
+                <file name="extensions/cocostudio/timeline/CCSkeletonNode.js"/>
                 <file name="extensions/cocostudio/loader/load.js"/>
                 <file name="extensions/cocostudio/loader/parsers/scene-1.x.js"/>
                 <file name="extensions/cocostudio/loader/parsers/uiParser-1.x.js"/>
@@ -296,6 +302,26 @@
                 <file name="external/chipmunk/chipmunk.js"/>
                 <file name="external/socketio/socket.io.min.js"/>
                 <file name="external/pluginx/Plugin.js"/>
+                <file name="external/gaf/GAFMacros.js"/>
+                <file name="external/gaf/GAFBoot.js"/>
+                <file name="external/gaf/Library/GAFAssetPreload.js"/>
+                <file name="external/gaf/Library/GAFAsset.js"/>
+                <file name="external/gaf/Library/GAFObject.js"/>
+                <file name="external/gaf/Library/GAFTimeLine.js"/>
+                <file name="external/gaf/Library/GAFTextField.js"/>
+                <file name="external/gaf/Library/GAFSprite.js"/>
+                <file name="external/gaf/Library/GAFMask.js"/>
+                <file name="external/gaf/Library/GAFSpriteCanvasRenderCmd.js"/>
+                <file name="external/gaf/Library/GAFSpriteWebGLRenderCmd.js"/>
+                <file name="external/gaf/Library/GAFTimeLineProto.js"/>
+                <file name="external/gaf/Library/GAFSpriteProto.js"/>
+                <file name="external/gaf/Library/GAFMaskProto.js"/>
+                <file name="external/gaf/Library/GAFTags.js"/>
+                <file name="external/gaf/Library/GAFLoader.js"/>
+                <file name="external/gaf/Library/GAFDataReader.js"/>
+                <file name="external/gaf/Library/GAFShaders.js"/>
+                <file name="external/gaf/Library/GAFShaderManager.js"/>
+                <file name="external/gaf/Library/GAFAtlasLoader.js"/>
 
             </sources>
             <sources dir="${basedir}">
