--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project name="Javascript compress project" basedir="D:\cocos\shuxue" default="compile">
 
     <taskdef name="jscomp" classname="com.google.javascript.jscomp.ant.CompileTask"
-             classpath="D:\cocos2d-x-3.7.1\tools\cocos2d-console\plugins\project_compile\build_web/bin/compiler-1.7.jar"/>
+             classpath="D:\cocosjs-3.5\cocos2d-js-v3.5\tools\cocos2d-console\plugins\project_compile\build_web/bin/compiler-1.7.jar"/>
 
     <target name="compile">
         <jscomp compilationLevel="simple" 
