--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="Javascript compress project" basedir="D:\cocos\1010New" default="compile">
+<project name="Javascript compress project" basedir="D:\cocos\hongBaoNew" default="compile">
 
     <taskdef name="jscomp" classname="com.google.javascript.jscomp.ant.CompileTask"
              classpath="D:\cocosjs-3.5\cocos2d-js-v3.5\tools\cocos2d-console\plugins\project_compile\build_web/bin/compiler-1.7.jar"/>
@@ -8,11 +8,11 @@
         <jscomp compilationLevel="simple" 
                 warning="quiet"
                 debug="false" 
-                output="D:\cocos\1010New\publish\html5/game.min.js"
+                output="D:\cocos\hongBaoNew\publish\html5/game.min.js"
                 languagein="ECMASCRIPT5"
                 
                 >
-            <sources dir="D:\cocos\1010New\frameworks\cocos2d-html5">
+            <sources dir="D:\cocos\hongBaoNew\frameworks\cocos2d-html5">
                 <file name="CCBoot.js"/>
                 <file name="CCDebugger.js"/>
                 <file name="cocos2d/core/utils/BinaryLoader.js"/>
@@ -171,11 +171,11 @@
             </sources>
             <sources dir="${basedir}">
                 <file name="src/resource.js"/>
-                <file name="src/GameMenuScene.js"/>
-                <file name="src/FKSprite.js"/>
-                <file name="src/GameConfig.js"/>
+                <file name="src/MenuScene.js"/>
                 <file name="src/GameMainScene.js"/>
-                <file name="src/JieShuLayer.js"/>
+                <file name="src/moneySprite.js"/>
+                <file name="src/GameConfig.js"/>
+                <file name="src/JieShuScene.js"/>
                 <file name="src/LoadingLayer.js"/>
                 <file name="src/publicBanBen.js"/>
                 <file name="main.js"/>
